# craft-poc-model

./: .gitignore  README.md  pyproject.toml
notebooks/: category-sales-model.ipynb  product-sales-model.ipynb  rawdata-cleaning.ipynb  train-model.ipynb
notebooks/data/: sales.csv
notebooks/models/: top_products_prediction_lgb.joblib  top_sales_prediction_lgb.joblib  top_sales_prediction_xgb.joblib
