[project]
name = "craft-poc-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "scikit-learn>=1.8.0",
    "scikit-learn-stubs>=0.0.3",
    "xgboost>=3.2.0",
]
